# rexprs

./: .gitignore  .rustc_info.json  Cargo.toml  LICENSE.md  README.md  ROADMAP.md  TUTORIAL.md  index.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.changeset/: config.json  curvy-pianos-smoke.md  twenty-jars-add.md
.github/workflows/: publish.yml  release.yml  test.yml
cli/: tsconfig.json
crates/rexprs-core/: Cargo.toml
crates/rexprs-core/src/: app.rs  lib.rs  router.rs  server.rs
crates/rexprs-core/src/http/: error.rs  types.rs
crates/rexprs-js/: .gitignore  CHANGELOG.md  Cargo.toml  index.d.ts  index.js  package.json  tsconfig.json
crates/rexprs-js/src/: handler.rs  lib.rs
crates/rexprs-js/src/bindings/: js_res.rs  mod.rs  res.rs  types.rs
