[package]
name = "rexprs-js"
version = "0.0.1"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.1.6", features = [
    "napi8",
    "tokio_rt",
    "async",
    "serde_json",
] }
napi-derive = "3.1.2"
rexprs-core = { path = "../rexprs-core" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
hyper = { version = "1.2", features = ["full"] }
http-body-util = "0.1.0"
url = "2.5"
serde_json = "1.0.142"
bytes = "1.10.1"

[build-dependencies]
napi-build = "2.2.3"

[profile.release]
lto = true
strip = "symbols"
